flux/apps/namespaces.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: monitoring
#   labels:
#     pod-security.kubernetes.io/enforce: privileged
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
