flux/apps/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: gateway
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: default-gateway-https
      hostname: "*.kubernetes.home"
      tls:
        certificateRefs:
          - kind: Secret
            name: gateway-cert
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 80
      name: default-gateway-http
      allowedRoutes:
        namespaces:
          from: All
