flux/apps/influxdb.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb
  namespace: monitoring
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway
  hostnames:
    - influxdb.kubernetes.home
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: influxdb-influxdb2
          port: 80
